kustomize/tools-stack/qrcode/qrcode-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: qrcode
spec:
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.253.25
  selector:
    app: qrcode
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: qrcode
