kustomize/tools-stack/qrcode/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qrcode
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qrcode-k8s.vinicima.com`) || Host(`qrcode.vinicima.com`)
      kind: Rule
      services:
        - name: qrcode
          port: 80
      middlewares:
        - name: body-size-50m
          namespace: traefik
  tls:
    secretName: vinicima-com-tls
